<resources>
    <string name="app_name">TCC</string>
    <string name="fourpets">Four Pets</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha"><u>Esqueci minha senha</u></string>
    <string name="entrar">Entrar</string>
    <string name="sem_conta_cadastre_se_aqui">Ainda não tem conta? Cadastre-se aqui</string>
    <string name="continuar_sem_login"><u>Continuar sem login</u></string>
    <string name="voltar">Voltar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="carrinho">Carrinho</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="preencha_os_campos">Preencha os campos com suas informações <br /><br /> A senha deve conter letras minúsculas, maiúsculas e no mínimo 8 caracateres</string>
    <string name="vazio" />
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="concordo_com_os_termos">Concordo com os <u><i>termos de uso e privacidade</i></u></string>
    <string name="desejo_receber_promocoes">Desejo receber promoções por email</string>
    <string name="home">Home</string>
    <string name="categorias">Categorias</string>
    <string name="minha_conta">Minha Conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="nome">Nome</string>
    <string name="logradouro">Logradouro</string>
    <string name="cpf">CPF</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="produtos">Produtos</string>
    <string name="cachorro">Cachorro</string>
    <string name="gato">Gato</string>
    <string name="passaro">Passaro</string>
    <string name="peixe">Peixe</string>
    <string name="produto_em_destaque">Produto em Destaque</string>
    <string name="reptil">Réptil</string>
    <string name="ra_o_whiskas_carne_para_gatos_adultos">Ração Whiskas Carne <br /> para Gatos Adultos 10 kg</string>
    <string name="preco">R$115,90</string>
    <string name="um">1</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="m_todo_de_pagamento">Método de Pagamento:</string>
    <string name="pagamentos_em_dinheiro_ser_o_cobrados_no_endere_o_de_entrega">Pagamentos em dinheiro serão cobrados no <br />
        endereço de entrega</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="carataodecredito">Cartão de Crédito</string>

</resources>