<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TelaCadastro">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fundoAzul"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtVoltarCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MainActivity"
            app:drawableStartCompat="@drawable/telacadastro_voltar" />

        <ImageView
            android:id="@+id/imgLogoCadastro"
            android:layout_width="86dp"
            android:layout_height="32dp"
            android:layout_weight="10"
            android:contentDescription="@string/fourpets"
            app:srcCompat="@drawable/telalogin_logo" />

        <TextView
            android:id="@+id/txtPesquisarCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableEndCompat="@drawable/telacadastro_search" />

        <TextView
            android:id="@+id/txtCarrinhoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableEndCompat="@drawable/telacadastro_carrinho" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/criar_conta"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtPreenchaCampos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtPreenchaCampos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/preencha_os_campos"
        app:layout_constraintBottom_toTopOf="@+id/txtEmailCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCriarConta" />

    <TextView
        android:id="@+id/txtEmailCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreenchaCampos" />

    <EditText
        android:id="@+id/edtEmailCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vazio"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtSenhaCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailCadastro" />

    <TextView
        android:id="@+id/txtSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/senha"
        app:layout_constraintBottom_toTopOf="@+id/edtSenhaCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailCadastro" />

    <EditText
        android:id="@+id/edtSenhaCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vazio"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtConfirmaSenhaCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaCadastro" />

    <TextView
        android:id="@+id/txtConfirmaSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirme_sua_senha"
        app:layout_constraintBottom_toTopOf="@+id/edtConfirmaSenhaCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaCadastro" />

    <EditText
        android:id="@+id/edtConfirmaSenhaCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vazio"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/ckTermos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmaSenhaCadastro" />

    <CheckBox
        android:id="@+id/ckTermos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:buttonTint="@color/vermelho"
        android:text="@string/concordo_com_os_termos"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ckPromocoes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmaSenhaCadastro" />

    <CheckBox
        android:id="@+id/ckPromocoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/vermelho"
        android:text="@string/desejo_receber_promocoes"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCriarConta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckTermos" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/telalogin_canto_levemente_arredondado"
        android:backgroundTint="@color/fundoAzul"
        android:onClick="criarConta"
        android:text="@string/criar_conta"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/progressCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckPromocoes" />

    <ProgressBar
        android:id="@+id/progressCadastro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:indeterminateTint="@color/vermelho"
        android:progressTint="@color/vermelho"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCriarConta" />

</androidx.constraintlayout.widget.ConstraintLayout>